--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,6 @@ img {
 
 .description {
   text-align: center;
-  padding: 42px 72px 51px 72px;
 }
 
 .description__header {
@@ -155,10 +154,13 @@ img {
   max-width: 470px;
   text-align: center;
   display: inline-block;
+  margin-top: 43px;
+  margin-bottom: 31px
 }
 
 .description__content {
   line-height: 26px;
+  margin-bottom: 53px;
 }
 
 .reasons-list,
