--- a/css/style.css
+++ b/css/style.css
@@ -392,6 +392,11 @@ img {
 
 /* Hotels. Main content*/
 
+.search {
+  min-height: 218px;
+  background-image: url(../img/hotels_filter_background.jpg);
+}
+
 .search__show-button {
   text-transform: inherit;
 }
@@ -399,19 +404,26 @@ img {
 .centering-content {
   margin: 0 72px;
   display: flex;
+  align-items: center;
 }
 
 .sorting {
-  min-height: 86px;
+  min-height: 85px;
   font-size: var(--font-size-small);
   line-height: 18px;
   color: var(--basic-black);
+}
+
+.sorting__name {
+  margin-right: 24px;
+  margin-left: 46px;
 }
 
 .sorting__result-text {
   font-weight: bold;
   font-size: var(--font-size-big);
   line-height: 26px;
+  margin: 30px 0;
 }
 
 .sorting a {
@@ -471,6 +483,7 @@ img {
   grid-gap: 0 29px;
   border-top: 1px solid var(--border-gray);
   padding: 30px 73px;
+  position: relative;
 }
 
 .hotels-item:last-child {
@@ -558,6 +571,48 @@ img {
   grid-row: 1/4;
   align-self: self-end;
   padding: 3px 12px 3px 15px;
+}
+
+.for_star:before {
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 75px;
+  height: 72px;
+  background-image: url(../img/star.svg), url(../img/star.svg), url(../img/star.svg), url(../img/star.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0, 25px 0, 50px 0, 75px 0;
+  min-width: 100px;
+}
+
+.three_star::before {
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 75px;
+  height: 72px;
+  background-image: url(../img/star.svg), url(../img/star.svg), url(../img/star.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0, 25px 0, 50px 0;
+  min-width: 100px;
+}
+
+.two_star::before {
+  content: "";
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 75px;
+  height: 72px;
+  background-image: url(../img/star.svg), url(../img/star.svg);
+  background-repeat: no-repeat;
+  background-position: 0 0, 25px 0;
+  min-width: 100px;
 }
 
 
