--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ img {
 .search-form {
   font-weight: bold;
   position: absolute;
-  width: min-content;
+  width: 568px;
   left: 50%;
   transform: translateX(-50%);
   top: 100%;
@@ -1102,4 +1102,17 @@ img {
 
 .developer__link:active .developer__logo {
   fill: var(--light-gray);
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateX(-50%) translateY(-100%);
+  }
+  100% {
+    transform: translateX(-50%) translateY(0);
+  }
+}
+
+.search-form--show {
+  animation: bounce 3s;
 }
