--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
   --main-shadow: 0 5px 15px rgba(0, 1, 1, 0.2);
   --form-shadow: 0px 7px 15px rgba(0, 1, 1, 0.15);
   /* Шрифты */
-  --font-family-basic: 'PT Sans', "Arial", sans-serif;
+  --font-family-basic: "PT Sans", "Arial", sans-serif;
   --font-size-small: 12px;
   --font-size-main: 14px;
   --font-size-big: 21px;
