исправен выезд формы

--- a/css/style.css
+++ b/css/style.css
@@ -350,22 +350,30 @@ img {
   background-position-y: 55px;
 }
 
+.block-conteiner {
+  z-index: 5;
+  position: relative;
+}
+
 .interesting {
   text-align: center;
   min-height: 235px;
   position: relative;
+  z-index: 5;
+  background-color: var(--basic-white);
+  padding-top: 1px;
 }
 
 .interesting__header {
-  margin-top: 56px;
+  margin-top: 55px;
   font-weight: bold;
   font-size: var(--font-size-extra-big);
   line-height: 24px;
 }
 
 .interesting__content {
-  margin-top: 35px;
-  margin-bottom: 35px;
+  margin-top: 32px;
+  margin-bottom: 45px;
   font-weight: normal;
   line-height: 24px;
 }
@@ -380,10 +388,6 @@ img {
   min-width: 568px;
   min-height: 86px;
   border: 0;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 0;
   cursor: pointer;
 }
 
@@ -405,7 +409,6 @@ img {
   width: 568px;
   left: 50%;
   transform: translateX(-50%);
-  top: 100%;
   z-index: 2;
   background-color: var(--basic-white);
   box-shadow: var(--form-shadow);
@@ -574,6 +577,10 @@ img {
   background-color: var(--basic-very-dark-blue);
   outline: none;
   color: var(--basic-big-opacity-white);
+}
+
+.map-and-form-container {
+  position: relative;
 }
 
 .map-container {
