--- a/css/style.css
+++ b/css/style.css
@@ -654,7 +654,7 @@ img {
   top: -3px;
   width: 23px;
   height: 23px;
-  background-image: url(../img/checkbox-off.svg);
+  background-image: url(../img/checkbox_off.svg);
   background-repeat: no-repeat;
 }
 
@@ -664,7 +664,7 @@ img {
   left: -40px;
   width: 27px;
   height: 23px;
-  background-image: url(../img/checkbox-active.svg);
+  background-image: url(../img/checkbox_active.svg);
   background-repeat: no-repeat;
 }
 
@@ -674,7 +674,7 @@ img {
   left: -46px;
   width: 27px;
   height: 23px;
-  background-image: url(../img/checkbox-blocked.svg);
+  background-image: url(../img/checkbox_blocked.svg);
   background-repeat: no-repeat;
 }
 
@@ -685,7 +685,7 @@ img {
   left: -46px;
   width: 27px;
   height: 23px;
-  background-image: url(../img/checkbox-active-blocked.svg);
+  background-image: url(../img/checkbox_active_blocked.svg);
   background-repeat: no-repeat;
 }
 
