--- a/css/style.css
+++ b/css/style.css
@@ -521,6 +521,8 @@ img {
 .search-form__input-btn {
   position: absolute;
   cursor: pointer;
+  padding: 0;
+  border: 0;
 }
 
 .search-form__input-btn--sub {
@@ -547,7 +549,7 @@ img {
 
 .search-form__input-btn--add {
   right: 13px;
-  top: 15px;
+  top: 13px;
 }
 
 .search-form__input-btn--add path:hover,
