--- a/css/style.css
+++ b/css/style.css
@@ -590,14 +590,11 @@ img {
   position: relative;
 }
 
-.map-container {
-  background-color: var(--basic-very-light-gray);
-  background-image: url(../img/map.jpg);
-}
-
 .map {
   width: 100%;
   height: 473px;
+  background-color: var(--basic-very-light-gray);
+  background-image: url(../img/map.jpg);
 }
 
 
@@ -1062,6 +1059,7 @@ img {
 
 .contacts__link {
   color: var(--basic-black);
+  display: block;
 }
 
 .social-list {
