--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,7 @@ img {
   width: 100%;
   height: 473px;
   background-color: var(--basic-very-light-gray);
-  background-image: url(../img/map.jpg);
+  background-image: url(../img/map.png);
 }
 
 
