--- a/css/style.css
+++ b/css/style.css
@@ -604,8 +604,9 @@ img {
 }
 
 .search {
-  min-height: 217px;
+  min-height: 166px;
   display: flex;
+  flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
   color: var(--basic-white);
@@ -616,17 +617,15 @@ img {
   padding: 0;
   margin-right: 118px;
   margin-left: 0;
-  margin-top: 23px;
 }
 
-.search__block-item:nth-child(3) {
-  margin-left: 231px;
+.search__block-item--coast-filter {
+  margin-left: auto;
   margin-right: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   align-self: flex-start;
-  margin-top: 28px;
 }
 
 .search__block-legend {
@@ -642,6 +641,10 @@ img {
   margin-left: 39px;
   margin-top: 32px;
   margin-bottom: 32px;
+}
+
+.search__input-checkbox-label:last-child {
+  margin-bottom: 10px;
 }
 
 .search__input-checkbox:focus+label {
@@ -809,13 +812,14 @@ img {
 }
 
 .centering-content {
-  margin: 0 73px;
+  padding: 28px 73px 23px 73px;
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .sorting {
-  min-height: 85px;
+  min-height: 86px;
   font-size: var(--font-size-small);
   line-height: 18px;
   color: var(--basic-black);
@@ -831,11 +835,11 @@ img {
   font-weight: bold;
   font-size: var(--font-size-big);
   line-height: 26px;
-  margin: 30px 0;
+  margin: 0;
 }
 
 .sorting a {
-  margin-bottom: 5px;
+  margin-top: 5px;
   color: inherit;
   border-bottom: dashed;
   border-bottom-width: 1px;
@@ -881,7 +885,7 @@ img {
 }
 
 .sorting__pic-link--right {
-  margin-left: 488px;
+  margin-left: auto;
   margin-right: 6px;
 }
 
