--- a/css/style.css
+++ b/css/style.css
@@ -1133,6 +1133,30 @@ img {
   }
 }
 
+@keyframes shake {
+  0%,
+  100% {
+    transform: translateX(-50%)
+  }
+  10%,
+  30%,
+  50%,
+  70%,
+  90% {
+    transform: translateX(-45%)
+  }
+  20%,
+  40%,
+  60%,
+  80% {
+    transform: translateX(-55%)
+  }
+}
+
 .search-form--show {
-  animation: bounce 3s;
+  animation: bounce 2s;
+}
+
+.search-form--error {
+  animation: shake 0.4s;
 }
